@@ -8,52 +8,20 @@ import javax.tools.JavaCompiler;
 import javax.tools.ToolProvider;
 import java.io.File;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.List;
 
 
 @Service
 public class RegressionRunner {
     
-    public void compileJavaFiles(String sourceDir) throws Exception
-    {
-        JavaCompiler compiler= ToolProvider.getSystemJavaCompiler();
-        if(compiler==null)
-             throw new IllegalStateException("NO java compiler  available");
-        File folder=new File(sourceDir);
-        compileRecursively(compiler,folder);
-        
-    }
-    private void compileRecursively(JavaCompiler compiler, File folder) throws Exception
-    {
-        if(!folder.exists())
-        {
-            throw new IllegalArgumentException("Source does not exist");
-        }
-        File[] files=folder.listFiles();
-        if(files==null) return;
-        for(File file:files)
-        {
-            if(file.isDirectory())
-            {
-                compileRecursively(compiler,file);
-            }
-            else if(file.getName().endsWith(".java"))
-            {
-                int result =compiler.run(null, null, null, file.getPath());
-                if(result !=0)
-                {
-                    throw new RuntimeException("Compilation FAILED for "+file.getName());
-                }
-                else
-                    System.out.println("compiled: "+file.getPath());
-            }
-        }
-    }
 
-    public static void runSuite(Path suitePath) {
+    public static void runSuite(String suitePath) {
+        System.out.println("Running TestNG suite at: " + suitePath);
+        File suiteFile = new File(suitePath);
+        System.out.println("Suite file exists: " + suiteFile.exists());
         TestNG testng = new TestNG();
-        testng.setTestSuites(List.of(suitePath.toAbsolutePath().toString()));
-        testng.setOutputDirectory("downloaded-scripts/test-outputs");
+        testng.setTestSuites(Collections.singletonList(suitePath));
         testng.run();
     }
 }
